@@ -8,13 +8,36 @@
 (fn ceil (x)    (*math.ceil x))
 (fn cos (x)     (*math.cos x))
 (fn exp (x)     (*math.exp x))
-(fn floor (x)   (*math.floor x))
 (fn log (x)     (*math.log x))
 (fn max (a b)   (*math.max a b))
 (fn min (a b)   (*math.min a b))
 (fn pow (x y)   (*math.pow x y))
-(fn round (x)   (*math.round x))
 (fn sin (x)     (*math.sin x))
 (fn sqrt (x)    (*math.sqrt x))
 (fn tan (x)     (*math.tan x))
 (fn random ()   (*math.random))
+
+(fn %decimal-adjust (fun val e)
+  (& (zero? e)
+     (return (funcall fun val)))
+  (= val (number val))
+  (= e (number e))
+  (= val ((val.to-string).split "e"))
+  (= val (funcall fun (number (string-concat (%aref val 0) "e" (? (& (%aref val 1)
+                                                                     (not (zero? (%aref val 1))))
+                                                                  (- (number (%aref val 1)) e)
+                                                                  (- e))))))
+  (= val ((val.to-string).split "e"))
+  (number (string-concat (%aref val 0) "e" (? (& (%aref val 1)
+                                                 (not (zero? (%aref val 1))))
+                                              (+ (number (%aref val 1)) e)
+                                              e))))
+
+(fn round (x &key (decimals 0))
+  (%decimal-adjust *math.round x (- decimals)))
+
+(fn floor (x &key (decimals 0))
+  (%decimal-adjust *math.floor x (- decimals)))
+
+(fn ceiling (x &key (decimals 0))
+  (%decimal-adjust *math.ceil x (- decimals)))
