@@ -10,6 +10,7 @@ Changes relative to tre-0.14:
   * LML keyword attributes are translated to camel notation when
     XML or DOM nodes are being generated.
   * Empty curly braces became literal empty JSON objects.
+  * JS: ROUND, FLOOR, CEILING: More accurate implementations.
 
 Changes of tre-0.14 relative to tre-0.13:
   * Don't miss functions that need to get imported from the host
